<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TmntActivity">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/type_a_turtle"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/turtle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:srcCompat="@drawable/tmntleo"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/turtle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:orientation="horizontal" android:id="@+id/radioGroup2">
        <RadioButton
                android:text="@string/leo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/leo" android:layout_weight="1"
                android:onClick="radioButtonClick"/>
        <RadioButton
                android:text="@string/mike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/mike" android:layout_weight="1"
                android:onClick="radioButtonClick"/>
        <RadioButton
                android:text="@string/don"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/don" android:layout_weight="1"
                android:onClick="radioButtonClick"/>
        <RadioButton
                android:text="@string/raph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/raph" android:layout_weight="1"
                android:onClick="radioButtonClick"/>
    </RadioGroup>
    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:entries="@array/characters" android:id="@+id/characterlist"/>
</androidx.constraintlayout.widget.ConstraintLayout>